# jakilid

./: .gitignore  CMakeLists.txt  README.md  client.cpp  helper.hpp  jakilid.hpp  mp.hpp  py.cpp  serializer.hpp  server.cpp  traits.hpp
libcuckoo/: cuckoohash_map.hh  libcuckoo_lazy_array.hh
test/: CMakeLists.txt  client.cpp  functionality.py  server.cpp
test/interprocess/: CMakeLists.txt  client.cpp  functionality.py
test/unit/: CMakeLists.txt  sample.cpp  typing.cpp
test/unit/utils/: mp.hpp  random.hpp
